--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,10 @@ jobs:
     # Runs a single command using the runners shell
     - name: Copy files to host
       run: |
+        ssh-keyscan worldvent.timekl.com 2>/dev/null >> known_hosts
+        echo "$SSH_DEPLOY_KEY" > id_rsa
         rsync \
+        -e "ssh -o UserKnownHostsFile=known_hosts -i id_rsa"
         --verbose --recursive --delete \
         --exclude .git --exclude .htaccess \
-        $GITHUB_WORKSPACE/ worldvent.timekl.com:worldvent.timekl.com/
+        $GITHUB_WORKSPACE/ dh_62nzey@worldvent.timekl.com:worldvent.timekl.com/
