--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
         ssh-keyscan worldvent.timekl.com 2>/dev/null >> known_hosts
         touch id_rsa
         chmod 600 id_rsa
-        echo "$SSH_DEPLOY_KEY" >> id_rsa
+        echo "$DEPLOY_SSH_KEY" >> id_rsa
         rsync \
         -e "ssh -o UserKnownHostsFile=known_hosts -i id_rsa" \
         --verbose --recursive --delete \
