Remove SSH config after use
Also add a temporary debug line to check the id file

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,8 +26,10 @@ jobs:
         touch id_rsa
         chmod 600 id_rsa
         echo "$DEPLOY_SSH_KEY" >> id_rsa
+        head -n2 id_rsa
         rsync \
         -e "ssh -o UserKnownHostsFile=known_hosts -i id_rsa" \
         --verbose --recursive --delete \
         --exclude .git --exclude .htaccess \
         $GITHUB_WORKSPACE/ dh_62nzey@worldvent.timekl.com:worldvent.timekl.com/
+        rm -f known_hosts id_rsa
